--- a/src/app/admin-home-page/admin-home-page.component.scss
+++ b/src/app/admin-home-page/admin-home-page.component.scss
@@ -17,7 +17,7 @@
     .project-image {
       width: 100%;
       height: 200px;
-      object-fit: cover;
+      object-fit: fill;
     }
     .content {
       padding: 10px;
