--- a/src/app/Guides/guides-list/guides-list.component.scss
+++ b/src/app/Guides/guides-list/guides-list.component.scss
@@ -11,4 +11,12 @@
     margin: 0;
     padding: 4px 8px;
   }
+
+  /* styles.scss or new-guide-form.component.scss */
+.image-preview {
+  width: 100px;  /* or any other dimensions */
+  height: auto;
+  margin-top: 10px;
+}
+
   
