--- a/src/app/Guides/new-guide-form/new-guide-form.component.html
+++ b/src/app/Guides/new-guide-form/new-guide-form.component.html
@@ -1,27 +1,27 @@
-<!-- new-guide-form.component.html -->
-<form (submit)="submitForm()">
-  <mat-form-field appearance="fill">
+<form (submit)="submitForm()" dir="rtl" class="full-width-form">
+  <mat-form-field appearance="fill" class="full-width-input">
     <mat-label>Title</mat-label>
     <input matInput placeholder="Enter the title" [(ngModel)]="title" name="title">
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" class="full-width-input">
     <mat-label>Created By</mat-label>
     <input matInput placeholder="Enter your name" [(ngModel)]="createdBy" name="createdBy">
   </mat-form-field>
 
   <!-- Dynamically add text sections or images -->
-<!-- new-guide-form.component.html -->
-<div *ngFor="let section of sections; let i = index">
-  <mat-form-field *ngIf="section.type === 'text'" appearance="fill">
-    <textarea matInput placeholder="Text content" [(ngModel)]="section.content" name="textContent{{i}}"></textarea>
-  </mat-form-field>
-  
-  <div *ngIf="section.type === 'image'" class="image-upload">
-    <input type="file" (change)="handleImageChange($event, i)">
-    <img *ngIf="section.preview" [src]="section.preview" class="image-preview">
+  <div *ngFor="let section of sections; let i = index" class="section">
+    <div>Position: {{ section.position }}</div>
+    <mat-form-field *ngIf="section.type === 'text'" appearance="fill">
+      <mat-label>Text content</mat-label>
+      <textarea matInput placeholder="Text content" [(ngModel)]="section.content" name="textContent{{i}}" style="width: 100%;"></textarea>
+    </mat-form-field>
+    
+    <div *ngIf="section.type === 'image'" class="image-upload full-width-input">
+      <input type="file" (change)="handleImageChange($event, i)">
+      <img *ngIf="section.preview" [src]="section.preview" class="image-preview" style="width: 100%; height: auto; margin-top: 10px;">
+    </div>
   </div>
-</div>
 
   <!-- Buttons to add text sections or images -->
   <button mat-button (click)="addTextSection()" type="button">
