--- a/src/app/Guides/view-guide/view-guide.component.html
+++ b/src/app/Guides/view-guide/view-guide.component.html
@@ -1,21 +1,22 @@
 <!-- ViewGuideComponent.html -->
 <div class="guide-container" dir="rtl">
-
-<!-- view-guide.component.html -->
-<div *ngIf="guide">
     <h1>{{ guide.title }}</h1>
     <p>Created by: {{ guide.createdBy }}</p>
     <p>Created date: {{ guide.createdDate | date:'medium' }}</p>
-    
-    <div *ngFor="let textSection of guide.textSections; let i = index">
-      <p><strong>Text Section {{ i + 1 }} (Position: {{ textSection.position }}):</strong> {{ textSection.textContent }}</p>
-    </div>
-    
-    <div *ngFor="let image of guide.pictures; let j = index">
-      <p><strong>Image {{ j + 1 }} (Position: {{ image.position }}):</strong></p>
-      <img [src]="image.imagePath" alt="Image {{ j + 1 }}" class="image-preview">
-    </div>
-  </div>
   
+    <div *ngFor="let item of guideItems">
+      <div *ngIf="item.type === 'text'">
+        <p> {{ item.textContent }}</p>
+      </div>
+      
+      <div *ngIf="item.type === 'picture'">
+       
+        <img [src]="item.imagePath" alt="Guide Image" class="image-preview">
+      </div>
+    </div>
+  
+    <div *ngIf="guideItems.length === 0">
+      <p>No content available.</p>
+    </div>
   </div>
   
