--- a/src/app/Guides/edit-guide-form/edit-guide-form.component.html
+++ b/src/app/Guides/edit-guide-form/edit-guide-form.component.html
@@ -1,19 +1,19 @@
 <form (submit)="submitForm()" dir="rtl" class="full-width-form">
     <mat-form-field appearance="fill" class="full-width-input">
       <mat-label>Title</mat-label>
-      <input matInput placeholder="Enter the title" [(ngModel)]="title" name="title">
+      <input matInput placeholder="Enter the title" [(ngModel)]="guide.title" name="title">
     </mat-form-field>
   
     <mat-form-field appearance="fill" class="full-width-input">
       <mat-label>Created By</mat-label>
-      <input matInput placeholder="Enter your name" [(ngModel)]="createdBy" name="createdBy">
+      <input matInput placeholder="Enter your name" [(ngModel)]="guide.createdBy" name="createdBy">
     </mat-form-field>
   
     <!-- Dynamically add text sections or images -->
-    <div *ngFor="let section of sections; let i = index" class="section">
+    <div *ngFor="let section of guide.sections; let i = index" class="section">
       <div>Position: {{ section.position }}</div>
       <button mat-icon-button (click)="moveSectionUp(i)" [disabled]="i === 0"><mat-icon>arrow_upward</mat-icon></button>
-      <button mat-icon-button (click)="moveSectionDown(i)" [disabled]="i === sections.length - 1"><mat-icon>arrow_downward</mat-icon></button>
+      <button mat-icon-button (click)="moveSectionDown(i)" [disabled]="i === guide.sections.length - 1"><mat-icon>arrow_downward</mat-icon></button>
       <mat-form-field *ngIf="section.type === 'text'" appearance="fill">
         <mat-label>Text content</mat-label>
         <textarea matInput placeholder="Text content" [(ngModel)]="section.content" name="textContent{{i}}"></textarea>
@@ -31,4 +31,3 @@
   
     <button mat-raised-button color="primary" type="button" (click)="submitForm()">Submit</button>
 </form>
-  
