--- a/src/app/Guides/edit-guide-form/edit-guide-form.component.html
+++ b/src/app/Guides/edit-guide-form/edit-guide-form.component.html
@@ -1,4 +1,6 @@
-<form (submit)="submitForm()" dir="rtl" class="full-width-form">
+<form>
+ <button mat-raised-button color="primary" (click)="updateGuide()" type="button">Update</button>
+
     <mat-form-field appearance="fill" class="full-width-input">
       <mat-label>Title</mat-label>
       <input matInput placeholder="Enter the title" [(ngModel)]="guide.title" name="title">
@@ -29,5 +31,5 @@
     <button mat-button (click)="addTextSection()" type="button">Add Text Section</button>
     <button mat-button (click)="addImageSection()" type="button">Add Image Section</button>
   
-    <button mat-raised-button color="primary" type="button" (click)="submitForm()">Submit</button>
+    <button mat-raised-button color="primary" type="submit">Submit</button>
 </form>
