--- a/src/app/Guides/edit-guide-form/edit-guide-form.component.html
+++ b/src/app/Guides/edit-guide-form/edit-guide-form.component.html
@@ -1,5 +1,4 @@
 <form>
-
     <mat-form-field appearance="fill" class="full-width-input">
       <mat-label>Title</mat-label>
       <input matInput placeholder="Enter the title" [(ngModel)]="guide.title" name="title">
@@ -11,20 +10,26 @@
     </mat-form-field>
   
     <!-- Dynamically add text sections or images -->
-    <div *ngFor="let section of guide.sections; let i = index" class="section">
-      <div>Position: {{ section.position }}</div>
-      <button mat-icon-button (click)="moveSectionUp(i)" [disabled]="i === 0"><mat-icon>arrow_upward</mat-icon></button>
-      <button mat-icon-button (click)="moveSectionDown(i)" [disabled]="i === guide.sections.length - 1"><mat-icon>arrow_downward</mat-icon></button>
-      <mat-form-field *ngIf="section.type === 'text'" appearance="fill">
-        <mat-label>Text content</mat-label>
-        <textarea matInput [ngModel]="section.content" name="textContent{{i}}" (input)="handleTextChange($event, i)"></textarea>
-    </mat-form-field>
+    <div *ngFor="let section of guide.sections; let i = index; trackBy: trackBySection" class="section">
+        <div>Position: {{ section.position }}</div>
+        <button mat-icon-button (click)="moveSectionUp(i)" [disabled]="i === 0">
+            <mat-icon>arrow_upward</mat-icon>
+        </button>
+        <button mat-icon-button (click)="moveSectionDown(i)" [disabled]="i === guide.sections.length - 1">
+            <mat-icon>arrow_downward</mat-icon>
+        </button>
+        <mat-form-field *ngIf="section.type === 'text'" appearance="fill">
+            <mat-label>Text Content</mat-label>
+            <textarea matInput [ngModel]="section.content" name="textContent{{i}}" (input)="handleTextChange($event, i)"></textarea>
+        </mat-form-field>
     
-      <div *ngIf="section.type === 'image'" class="image-upload">
-        <input type="file" (change)="handleImageChange($event, i)">
-        <img *ngIf="section.preview" [src]="section.preview" class="image-preview">
-      </div>
-      <button mat-icon-button color="warn" (click)="removeSection(i)"><mat-icon>delete</mat-icon></button>
+        <div *ngIf="section.type === 'image'" class="image-upload">
+            <input type="file" (change)="handleImageChange($event, i)">
+            <img *ngIf="section.preview" [src]="section.preview" class="image-preview">
+        </div>
+        <button mat-icon-button color="warn" (click)="removeSection(i)">
+            <mat-icon>delete</mat-icon>
+        </button>
     </div>
   
     <button mat-button (click)="addTextSection()" type="button">Add Text Section</button>
